# btc-option-manager

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  INSTALL.md  README.md  generate_test_contracts.sh  run_with_oracle.sh  shell.nix  start-oracle-system.sh  test-oracle-integration.sh  test_api.sh  test_with_real_wallet.sh
docs/: API_REFERENCE.md  CLAUDE.md  EXTERNAL_API_TEST_REPORT.md  INSTALL.md  MUTINY_WALLET_GUIDE.md  ORACLE_INTEGRATION_SUMMARY.md  ORACLE_SETUP.md
proto/: oracle.proto
src/: db.rs  db_migration.rs  error.rs  iv_oracle.rs  lib.rs  main.rs  main_original.rs  mock_apis.rs  mutiny_wallet.rs  oracle_adapter.rs  price_oracle.rs  risk_manager.rs  utils.rs
tests/: price_oracle_integration_test.rs  unit_tests.rs
