[package]
name = "btc_options_api"
version = "0.1.0"
edition = "2021"

[lib]
name = "btc_options_api"
path = "src/lib.rs"


[dependencies]
actix-rt = "2.10.0"
actix-web = "4.11.0"
black_scholes = "0.10.2"
chrono = "0.4.41"
dotenv = "0.15.0"
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
tonic = "0.11"
prost = "0.12"
